saved session setting to db
